<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" style="@style/content_window" >
    <TextView style="@style/title" android:text="@string/about"/>
    <TextView style="@style/line" android:text="@string/about_desc1"/>
    <TextView style="@style/line" android:text="@string/about_features"/>
    <TextView style="@style/line1" android:text="@string/about_features_voting"/>
    <TextView style="@style/line1" android:text="@string/about_features_full_screen"/>
    <TextView style="@style/line1" android:text="@string/about_features_scroll"/>
    <TextView style="@style/line1" android:text="@string/about_features_screen_on"/>
    <TextView style="@style/line1" android:text="@string/about_features_tap_to_hide_show"/>
</LinearLayout>
